# OpenGL-CMake-Template

./: .gitignore  CMakeLists.txt  build.bat
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: main.cpp
